generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model User {
  id        Int      @id @default(autoincrement())
  email     String   @unique
  password  String
  role      String   @default("CUSTOMER")
  createdAt DateTime @default(now())

  orders Order[]
  cart   Cart?
}

model Product {
  id            Int      @id @default(autoincrement())
  name          String
  description   String?
  category      String?
  price         Decimal   @db.Decimal(10,2)
  stockQuantity Int
  version       Int       @default(1)
  createdAt     DateTime  @default(now())
  updatedAt     DateTime  @updatedAt

  orderItems OrderItem[]
  cartItems  CartItem[]
}

model Cart {
  id        Int      @id @default(autoincrement())
  userId    Int      @unique
  user      User     @relation(fields: [userId], references: [id])
  items     CartItem[]
  updatedAt DateTime @updatedAt
}

model CartItem {
  id        Int     @id @default(autoincrement())
  cartId    Int
  productId Int
  quantity  Int

  cart    Cart    @relation(fields: [cartId], references: [id])
  product Product @relation(fields: [productId], references: [id])
}

model Order {
  id          Int        @id @default(autoincrement())
  userId      Int
  totalAmount Decimal     @db.Decimal(10,2)
  status      String      @default("PENDING")
  createdAt   DateTime    @default(now())

  user  User       @relation(fields: [userId], references: [id])
  items OrderItem[]
}

model OrderItem {
  id            Int      @id @default(autoincrement())
  orderId       Int
  productId     Int
  quantity      Int
  priceSnapshot Decimal   @db.Decimal(10,2)

  order   Order   @relation(fields: [orderId], references: [id])
  product Product @relation(fields: [productId], references: [id])
}
